fix issues review romulo